--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,141 +39,20 @@ body {
   text-align: center;
   background-color: var(--DarkBlue);
 }
-/* Input Language*/
-
-.containerLanguage{
+.formContainer{
   display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 20px;
+  justify-content: center;
   left: 0;
   right: 0;
-  
 }
-
-.form {
-  background: var(--background);
-  width: var(--width);
-  height: var(--height);
-  border-radius: var(--border-radius);
-  color: var(--text);
-  position: relative;
-  box-shadow: 0 10px 30px rgba(65, 72, 86, 0.05);
-  padding: 30px 20px;
-  display: grid;
-  grid-template-columns: auto var(--radio-size);
-  align-items: center;
+.selectForm{
+  border-radius: 20px;
+  padding: 10px 20px;
+  background:var(--GrayishBlue);
+  color: var(--NeonGreen);
 }
-
-.form label {
-  cursor: pointer;
-}
-
-.form input[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  position: relative;
-  height: var(--radio-size);
-  width: var(--radio-size);
-  outline: none;
-  margin: 0;
-  cursor: pointer;
-  border: 2px solid var(--radio);
-  background: transparent;
-  border-radius: 50%;
-  display: grid;
-  justify-self: end;
-  justify-items: center;
-  align-items: center;
-  overflow: hidden;
-  transition: border .5s ease;
-}
-
-.form input[type="radio"]::before, .form input[type="radio"]::after {
-  content: "";
-  display: flex;
-  justify-self: center;
-  border-radius: 50%;
-}
-
-.form input[type="radio"]::before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: var(--background);
-  z-index: 1;
-  opacity: var(--opacity, 1);
-}
-
-.form input[type="radio"]::after {
-  position: relative;
-  width: calc(100% /2);
-  height: calc(100% /2);
-  background: var(--radio-checked);
-  top: var(--y, 100%);
-  transition: top 0.5s cubic-bezier(0.48, 1.97, 0.5, 0.63);
-}
-
-.form input[type="radio"]:checked {
-  --radio: var(--radio-checked);
-}
-
-.form input[type="radio"]:checked::after {
-  --y: 0%;
-  animation: stretch-animate .3s ease-out .17s;
-}
-
-.form input[type="radio"]:checked::before {
-  --opacity: 0;
-}
-
-.form input[type="radio"]:checked ~ input[type="radio"]::after {
-  --y: -100%;
-}
-
-.form input[type="radio"]:not(:checked)::before {
-  --opacity: 1;
-  transition: opacity 0s linear .5s;
-}
-
-@keyframes stretch-animate {
-  0% {
-    transform: scale(1, 1);
-  }
-
-  28% {
-    transform: scale(1.15, 0.85);
-  }
-
-  50% {
-    transform: scale(0.9, 1.1);
-  }
-
-  100% {
-    transform: scale(1, 1);
-  }
-}
-
-.socials {
-  position: fixed;
-  display: block;
-  left: 20px;
-  bottom: 20px;
-}
-
-.socials > a {
-  display: block;
-  width: 30px;
-  opacity: .2;
-  transform: scale(var(--scale, 0.8));
-  transition: transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
-}
-
-.socials > a:hover {
-  --scale: 1;
-}
-
 
 .container {
   margin: 10px;
@@ -185,6 +64,7 @@ body {
   width: 520px;
   height: auto;
   background-color: var(--GrayishBlue);
+  box-shadow: -1px 3px 5px rgb(178, 178, 178);
 }
 .container .advise{
   color: var(--NeonGreen);
@@ -228,16 +108,12 @@ body {
     width: 320px;
   }
   container .text{
-    font-size: 20px;
+    font-size: 10px;
   }
 }
-@media (max-height:670px) {
-  body {
-    justify-content: end;
-    padding-bottom: 90px;
-  }
+@media (max-width:670px) {
   .container .text{
     padding: 0 10px 30px 10px;
-    font-size: 20px;
+    font-size: 14px;
   }
 }
